--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,52 @@
 {
   "name": "Spirit AI",
-  "short_name": "SpiritAI",
+  "short_name": "Spirit AI",
   "description": "Your intelligent AI companion with David's voice and Wav2Lip video technology",
-  "start_url": "/",
+  "start_url": "/static/index.html",
   "display": "standalone",
   "background_color": "#0f172a",
-  "theme_color": "#00ffea",
-  "orientation": "portrait",
+  "theme_color": "#0f172a",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://spirit-ai.netlify.app/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "/static/icons/icon-72.png",
+      "sizes": "72x72",
+      "type": "image/png"
     },
     {
-      "src": "https://spirit-ai.netlify.app/icon-512.png",
+      "src": "/static/icons/icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["education", "productivity"],
-  "screenshots": [
-    {
-      "src": "https://spirit-ai.netlify.app/screenshot1.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "New Chat",
-      "short_name": "Chat",
-      "description": "Start a new AI conversation",
-      "url": "/?newchat",
-      "icons": [
-        {
-          "src": "https://spirit-ai.netlify.app/icon-96.png",
-          "sizes": "96x96"
-        }
-      ]
+      "type": "image/png"
     }
   ]
 }
