--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,9 @@
 {
   "name": "Spirit AI",
-  "short_name": "SpiritAI", 
+  "short_name": "SpiritAI",
   "description": "Your intelligent AI companion",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
-  "theme_color": "#00ffea",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ]
+  "theme_color": "#00ffea"
 }
