--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,24 @@
 {
   "name": "Spirit AI",
-  "short_name": "Spirit AI",
+  "short_name": "SpiritAI",
   "description": "Your intelligent AI companion with David's voice and Wav2Lip video technology",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
-  "theme_color": "#00ffea",
+  "theme_color": "#0f172a",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://img.icons8.com/color/96/000000/artificial-intelligence.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "https://img.icons8.com/color/144/000000/artificial-intelligence.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "https://img.icons8.com/color/192/000000/artificial-intelligence.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://img.icons8.com/color/512/000000/artificial-intelligence.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ],
-  "categories": ["education", "productivity", "utilities"]
+  ]
 }
