--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,28 @@
 {
   "name": "Spirit AI",
   "short_name": "SpiritAI",
-  "description": "Your intelligent AI companion with David's voice and Wav2Lip video technology",
-  "start_url": "/",
+  "description": "Your intelligent AI companion",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#0f172a",
-  "theme_color": "#0f172a",
-  "orientation": "portrait-primary",
+  "theme_color": "#00ffea",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
     }
   ]
 }
